--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -62,6 +62,7 @@ pipeline {
                         //code files (with .pyc extension) from the previously saved stash. image]
                         //and runs this image as a separate container.
                         dir(path: env.BUILD_ID) {
+                            //error
                             unstash(name: 'compiled-results')
 
                             //This sh step executes the pyinstaller command (in the PyInstaller container) on your simple Python application.
